--- a/Practice1.html
+++ b/Practice1.html
@@ -10,10 +10,15 @@
 <h2>Bye Bye</h2>
 <a href="#">My link</a>
 <ul>
-	<li id="highlight">List item 1 by getElementById</li>
-	<li class="bolded">List item 2</li>
-	<li class="bolded">List item 3</li>
+	<li id="highlight">List item 1 by getElementById or getElementsByTagName</li>
+	<li class="bolded">List item 2 getElementsByClassName</li>
+	<li class="bolded">List item 3 </li>
 </ul>
+
+<p id="first" class="special">Hello1 Again</p>
+<p class="special">Hello2 Again</p>
+<p>Hello3 Again</p>
+<p id="last">Hello4 Again</p>
 
 <script type="text/javascript"	src="script1.js"></script>
 </body>
