add List Onclick change color to orange each element

--- a/PracticeJS2_DOM_addEventListener.html
+++ b/PracticeJS2_DOM_addEventListener.html
@@ -8,6 +8,12 @@
 	<h1>Hello and Goodbye button</h1>
 	<button>Click Me</button>
 	<p>Hello!!!</p>
+
+	<ul>
+		<li>Black</li>
+		<li>Black</li>
+		<li>Black</li>
+	</ul>
 <script type="text/javascript" src="script2.js"></script>
 </body>
 </html>
