--- a/PracticeJS2_DOM_addEventListener.html
+++ b/PracticeJS2_DOM_addEventListener.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hello and Goodbye button</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<h1>Hello and Goodbye button</h1>
