--- a/PracticeJS3_DOM_Math.html
+++ b/PracticeJS3_DOM_Math.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<h1>Score Keeper</h1>
-	<h2>0 to 0</h2>
+	<h2><span id="p1display">0</span> to <span id="p2display">0</span></h2>
 	<p>Playing to: 5</p>
 
 	<input type="number">
-	<button>Player one</button>
-	<button>Player two</button>
-	<button>Reset</button>
+	<button id="bplayer1">Player one</button>
+	<button id="bplayer2">Player two</button>
+	<button id="breset">Reset</button>
 
 <script type="text/javascript" src="script3.js"></script>
 </body>
