add funciton reset into input method

--- a/PracticeJS3_DOM_Math.html
+++ b/PracticeJS3_DOM_Math.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Score Keeper</title>
+	<link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 <body>
 	<h1>Score Keeper</h1>
 	<h2><span id="p1display">0</span> to <span id="p2display">0</span></h2>
-	<p>Playing to: 5</p>
+	<p>Playing to: <span id="numPlayMax">5</span></p>
 
 	<input type="number">
 	<button id="bplayer1">Player one</button>
