--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styleColorGame.css">
 </head>
 <body>
-<div class="container">
+<div id="container">
 	<div class="square"></div>
 	<div class="square"></div>
 	<div class="square"></div>
