Add h1 and color white in css

--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styleColorGame.css">
 </head>
 <body>
+	<h1>The Greate RGB Color Game</h1>
 <div id="container">
 	<div class="square"></div>
 	<div class="square"></div>
