--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 	<h1>The Greate <span id=colordisplay>RGB</span> Color Game</h1>
+	<div>
+		<span></span>
+		<span id="message"></span>
+		<span></span>
+		<span></span>
+	</div>
 <div id="container">
 	<div class="square"></div>
 	<div class="square"></div>
