--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<h1>The Greate <span id=colordisplay>RGB</span> Color Game</h1>
-	<div>
-		<span></span>
+	<div id="stripe">
+		<button>New Colors</button>
 		<span id="message"></span>
 		<span></span>
 		<span></span>
