--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>The Greate <span id=colordisplay>RGB</span> Color Game</h1>
 	<div id="stripe">
-		<button>New Colors</button>
+		<button id="reset">New Colors</button>
 		<span id="message"></span>
 		<span></span>
 		<span></span>
