--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -11,7 +11,7 @@
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
 		<button id="easy">Easy</button>
-		<button id="hard">Hard</button>
+		<button id="hard" class="selected">Hard</button>
 		<span></span>
 		<span></span>
 	</div>
