--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -4,9 +4,13 @@
 	<title>Color Game</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styleColorGame.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
-	<h1>The Greate <span id=colordisplay>RGB</span> Color Game</h1>
+	<h1>The Greate 
+	<br> <span id=colordisplay>RGB</span> 
+	<br>
+	Color Game</h1>
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
