--- a/Exercise1_GuessColor.html
+++ b/Exercise1_GuessColor.html
@@ -14,9 +14,10 @@
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
-		<button id="easy">Easy</button>
-		<button id="medium" class="selected">Medium</button>
-		<button id="hard">Hard</button>
+		<!-- <button id="easy" -->
+		<button class="mode">Easy</button>
+		<button class="mode selected">Medium</button>
+		<button class="mode">Hard</button>
 		
 	</div>
 <div id="container">
